deploy: 9d2fc22f1ecd5e288d042ce555d37a60ad63272a

--- a/donate/btc.html
+++ b/donate/btc.html
@@ -1,75 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
-		<meta http-equiv="content-security-policy" content="">
-		<link href="../_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
-		<link href="../_app/immutable/assets/_page.a9981ce8.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.8aa09840.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.1f6aa681.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.b3deb2ea.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.24dd2afc.js">
+		
+		<link href="../_app/immutable/assets/0.1f819e44.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/5.a9981ce8.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.2073de0a.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.feaddeb4.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.80f6d9f8.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/control.f5b05b5f.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.183f82cf.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index.320256d5.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.c732cb4c.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.56460d9b.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.9c4b141e.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.6ec77645.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.9cd54588.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.470efae5.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/meta.b9b36afe.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.3a24f074.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.a25d66be.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_page.a3a9e2f4.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/btc"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/btc"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
+		<link rel="modulepreload" href="../_app/immutable/nodes/2.11b77075.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/meta.eff12250.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/5.6fceeea7.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/btc"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/btc"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
 	</head>
 	<body>
-		<div>
-
-
-<div class="grid-container svelte-80q6by"><div class="main-content svelte-80q6by">
-<h1>Bitcoin</h1>
-<p class="svelte-bzs1vh"><span class="svelte-bzs1vh">bc1q00fygpsvgxkxw3f04twwrjmlgh2amc6pm6mpjj</span>
-	<button aria-label="Скопировать" class="svelte-kzqxxw"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" aria-hidden="true" class="bx--snippet__icon" viewBox="0 0 32 32"><path d="M28 10v18H10V10h18m0-2H10a2 2 0 0 0-2 2v18a2 2 0 0 0 2 2h18a2 2 0 0 0 2-2V10a2 2 0 0 0-2-2Z"/><path d="M4 18H2V4a2 2 0 0 1 2-2h14v2H4Z"/></svg><!-- HTML_TAG_END -->
-	
-</button></p>
-
-<div class="svelte-bzs1vh"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 37 37" shape-rendering="crispEdges"><path fill="#ffffff" d="M0 0h37v37H0z"/><path stroke="#000000" d="M4 4.5h7m5 0h2m2 0h1m2 0h2m1 0h7M4 5.5h1m5 0h1m4 0h1m2 0h2m1 0h1m4 0h1m5 0h1M4 6.5h1m1 0h3m1 0h1m1 0h3m1 0h1m1 0h2m4 0h1m1 0h1m1 0h3m1 0h1M4 7.5h1m1 0h3m1 0h1m1 0h1m1 0h1m2 0h1m1 0h3m2 0h1m1 0h1m1 0h3m1 0h1M4 8.5h1m1 0h3m1 0h1m1 0h1m2 0h1m2 0h1m1 0h1m2 0h2m1 0h1m1 0h3m1 0h1M4 9.5h1m5 0h1m1 0h1m2 0h5m1 0h1m4 0h1m5 0h1M4 10.5h7m1 0h1m1 0h1m1 0h1m1 0h1m1 0h1m1 0h1m1 0h1m1 0h7M12 11.5h5m3 0h1m3 0h1M4 12.5h1m1 0h5m2 0h1m3 0h5m2 0h1m1 0h5M4 13.5h1m2 0h1m1 0h1m3 0h1m3 0h1m5 0h1m1 0h4m3 0h1M4 14.5h1m2 0h1m2 0h1m7 0h5m6 0h1M4 15.5h3m2 0h1m2 0h1m3 0h1m1 0h1m3 0h1m3 0h3M4 16.5h1m1 0h1m1 0h4m4 0h4m1 0h1m2 0h1m2 0h1m1 0h3M8 17.5h2m1 0h5m2 0h1m1 0h4m2 0h3m3 0h1M5 18.5h1m3 0h4m1 0h2m3 0h4m2 0h3m3 0h1M4 19.5h5m3 0h2m1 0h2m2 0h2m1 0h4m2 0h1m3 0h1M4 20.5h1m4 0h2m2 0h3m1 0h2m2 0h1m5 0h1m1 0h3M4 21.5h3m1 0h2m3 0h5m2 0h9m2 0h2M4 22.5h1m1 0h1m1 0h1m1 0h3m2 0h3m1 0h2m3 0h3m1 0h1M4 23.5h1m1 0h1m4 0h1m1 0h2m4 0h1m3 0h1m2 0h1m1 0h2m1 0h2M4 24.5h1m3 0h4m2 0h1m2 0h3m1 0h1m2 0h5m1 0h2M12 25.5h3m2 0h1m2 0h5m3 0h2m1 0h2M4 26.5h7m2 0h2m2 0h1m1 0h1m3 0h2m1 0h1m1 0h1m1 0h1M4 27.5h1m5 0h1m1 0h2m1 0h1m6 0h1m1 0h1m3 0h2m1 0h2M4 28.5h1m1 0h3m1 0h1m1 0h1m1 0h1m1 0h1m2 0h3m2 0h9M4 29.5h1m1 0h3m1 0h1m1 0h3m1 0h2m4 0h3m2 0h1m2 0h3M4 30.5h1m1 0h3m1 0h1m1 0h1m1 0h3m2 0h1m1 0h1m1 0h1m2 0h4m1 0h1M4 31.5h1m5 0h1m2 0h2m1 0h1m2 0h1m3 0h5m1 0h1m1 0h1M4 32.5h7m1 0h2m2 0h1m1 0h1m2 0h1m1 0h1m1 0h1m1 0h2m1 0h1"/></svg>
-<!-- HTML_TAG_END --></div></div>
-	<div class="footer svelte-80q6by"><nav class="svelte-sn6y8m"><a href="https://yslpn.github.io/spblpr/" class="svelte-sn6y8m">Главная</a>
-
-		/
-			<a href="https://yslpn.github.io/spblpr/donate" class="svelte-sn6y8m">Пожертвовать</a>
-			/
-				<a href="https://yslpn.github.io/spblpr/donate/once" class="svelte-sn6y8m">Разовое пожертвование</a>
-				/
-					<a href="https://yslpn.github.io/spblpr/donate/crypto" class="svelte-sn6y8m">Криптовалюты</a></nav>
-		<ul class="svelte-15n3bs8"><li><a href="https://t.me/spblpr" target="_blank" aria-label="Telegram ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#1d98dc" d="M0 0h42v42H0z"/><path fill="#d8e4ee" d="M18.236 26.982c-.494 0-.41-.187-.581-.658L16.2 21.535l11.2-6.644"/><path fill="#c1d7e5" d="M18.236 27.057c.382 0 .55-.174.764-.382l2.036-1.98-2.54-1.531"/><path fill="#fff" d="m18.506 23.193 6.155 4.547c.703.388 1.21.187 1.384-.652l2.506-11.806c.256-1.028-.392-1.495-1.064-1.19l-14.712 5.673c-1.004.403-.998.963-.183 1.212l3.776 1.179 8.74-5.514c.413-.25.791-.116.48.16"/></g></svg><!-- HTML_TAG_END --></a></li>
-	<li><a href="https://twitter.com/spblpr" target="_blank" aria-label="Twitter ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#69ace0" d="M0 0h42v42H0z"/><path fill="#fff" d="M27.667 16.333 29.333 16s-1.4 1.567-1.666 1.667c-.034.766 0 1 0 1-3.2 13.733-15 7.666-15 7.666 4.3.1 4.666-1.666 4.666-1.666-2.5-.367-3-2-3-2 .867.4 1.334-.334 1.334-.334-2.7-.7-2.334-3.333-2.334-3.333.467.4 1.2.567 1.634.633-.3-.366-2.834-3.4-1.3-4.966 0 0 1.866 3.333 6.766 3.633l.334-.067C20.7 18 20.7 17.767 20.7 17.5a3.5 3.5 0 0 1 3.5-3.5c2.333 0 2.833 1.333 2.833 1.333l1.667-1c-.033 0-.2 1.667-1.033 2z"/></g></svg><!-- HTML_TAG_END --></a></li>
-	<li><a href="https://vk.com/spblpr" target="_blank" aria-label="VK ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#507299" d="M0 0h42v42H0z"/><path fill="#fff" d="M22.426 25.471a.646.646 0 0 0 .476-.204.66 3.663 0 0 0 .136-.408s0-1.342.612-1.546c.611-.204 1.427 1.275 2.243 1.818a1.87 1.87 0 0 0 1.156.34h2.244s1.155 0 .611-1.002a8.346 8.346 0 0 0-1.7-1.887c-1.427-1.275-1.223-1.07.477-3.298 1.02-1.342 1.427-2.158 1.36-2.566-.069-.408-.884-.272-.884-.272h-2.499a.918.918 0 0 0-.34 0 .527.527 0 0 0-.204.272c-.262.677-.58 1.33-.952 1.955-1.155 1.886-1.563 1.954-1.7 1.886-.135-.068-.34-1.07-.34-1.7 0-1.818.273-2.566-.543-2.77a3.926 3.926 0 0 0-1.377-.05 5.949 5.949 0 0 0-2.108.203c-.272.136-.544.476-.408.476.285.007.555.13.748.34.185.35.279.742.272 1.139 0 0 .136 2.158-.34 2.43-.476.272-.816-.204-1.835-1.886a10.997 10.997 0 0 1-.884-1.82.527.527 0 0 0-.187-.271.68.68 0 0 0-.408-.136h-2.448a.85.85 0 0 0-.544.136c-.136.136 0 .408 0 .408a27.195 27.195 0 0 0 4.08 6.544 5.864 5.864 0 0 0 4.215 1.886l1.07-.017z"/></g></svg><!-- HTML_TAG_END --></a></li>
-	
-	<li><a href="https://youtube.com/spblpr" target="_blank" aria-label="YouTube ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#f33" d="M0 0h42v42H0z"/><path fill="#fff" d="m17 27.489 10.645-6.148L17 15.194z"/></g></svg><!-- HTML_TAG_END --></a></li>
-</ul></div>
-</div>
-
-
+		<div>  <div class="grid-container svelte-80q6by"><div class="main-content svelte-80q6by"> <h1>Bitcoin</h1> <p class="svelte-bzs1vh"><span class="svelte-bzs1vh">bc1q00fygpsvgxkxw3f04twwrjmlgh2amc6pm6mpjj</span> <button aria-label="Скопировать" class="svelte-kzqxxw"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" aria-hidden="true" class="bx--snippet__icon" viewBox="0 0 32 32"><path d="M28 10v18H10V10h18m0-2H10a2 2 0 0 0-2 2v18a2 2 0 0 0 2 2h18a2 2 0 0 0 2-2V10a2 2 0 0 0-2-2Z"/><path d="M4 18H2V4a2 2 0 0 1 2-2h14v2H4Z"/></svg><!-- HTML_TAG_END -->  </button></p> <div class="svelte-bzs1vh"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 37 37" shape-rendering="crispEdges"><path fill="#ffffff" d="M0 0h37v37H0z"/><path stroke="#000000" d="M4 4.5h7m5 0h2m2 0h1m2 0h2m1 0h7M4 5.5h1m5 0h1m4 0h1m2 0h2m1 0h1m4 0h1m5 0h1M4 6.5h1m1 0h3m1 0h1m1 0h3m1 0h1m1 0h2m4 0h1m1 0h1m1 0h3m1 0h1M4 7.5h1m1 0h3m1 0h1m1 0h1m1 0h1m2 0h1m1 0h3m2 0h1m1 0h1m1 0h3m1 0h1M4 8.5h1m1 0h3m1 0h1m1 0h1m2 0h1m2 0h1m1 0h1m2 0h2m1 0h1m1 0h3m1 0h1M4 9.5h1m5 0h1m1 0h1m2 0h5m1 0h1m4 0h1m5 0h1M4 10.5h7m1 0h1m1 0h1m1 0h1m1 0h1m1 0h1m1 0h1m1 0h1m1 0h7M12 11.5h5m3 0h1m3 0h1M4 12.5h1m1 0h5m2 0h1m3 0h5m2 0h1m1 0h5M4 13.5h1m2 0h1m1 0h1m3 0h1m3 0h1m5 0h1m1 0h4m3 0h1M4 14.5h1m2 0h1m2 0h1m7 0h5m6 0h1M4 15.5h3m2 0h1m2 0h1m3 0h1m1 0h1m3 0h1m3 0h3M4 16.5h1m1 0h1m1 0h4m4 0h4m1 0h1m2 0h1m2 0h1m1 0h3M8 17.5h2m1 0h5m2 0h1m1 0h4m2 0h3m3 0h1M5 18.5h1m3 0h4m1 0h2m3 0h4m2 0h3m3 0h1M4 19.5h5m3 0h2m1 0h2m2 0h2m1 0h4m2 0h1m3 0h1M4 20.5h1m4 0h2m2 0h3m1 0h2m2 0h1m5 0h1m1 0h3M4 21.5h3m1 0h2m3 0h5m2 0h9m2 0h2M4 22.5h1m1 0h1m1 0h1m1 0h3m2 0h3m1 0h2m3 0h3m1 0h1M4 23.5h1m1 0h1m4 0h1m1 0h2m4 0h1m3 0h1m2 0h1m1 0h2m1 0h2M4 24.5h1m3 0h4m2 0h1m2 0h3m1 0h1m2 0h5m1 0h2M12 25.5h3m2 0h1m2 0h5m3 0h2m1 0h2M4 26.5h7m2 0h2m2 0h1m1 0h1m3 0h2m1 0h1m1 0h1m1 0h1M4 27.5h1m5 0h1m1 0h2m1 0h1m6 0h1m1 0h1m3 0h2m1 0h2M4 28.5h1m1 0h3m1 0h1m1 0h1m1 0h1m1 0h1m2 0h3m2 0h9M4 29.5h1m1 0h3m1 0h1m1 0h3m1 0h2m4 0h3m2 0h1m2 0h3M4 30.5h1m1 0h3m1 0h1m1 0h1m1 0h3m2 0h1m1 0h1m1 0h1m2 0h4m1 0h1M4 31.5h1m5 0h1m2 0h2m1 0h1m2 0h1m3 0h5m1 0h1m1 0h1M4 32.5h7m1 0h2m2 0h1m1 0h1m2 0h1m1 0h1m1 0h1m1 0h2m1 0h1"/></svg>
+<!-- HTML_TAG_END --></div></div> <div class="footer svelte-80q6by"><nav class="svelte-sn6y8m"><a href="https://yslpn.github.io/spblpr/" class="svelte-sn6y8m">Главная</a> /
+			<a href="https://yslpn.github.io/spblpr/donate" class="svelte-sn6y8m">Пожертвовать</a> /
+				<a href="https://yslpn.github.io/spblpr/donate/once" class="svelte-sn6y8m">Разовое пожертвование</a> /
+					<a href="https://yslpn.github.io/spblpr/donate/crypto" class="svelte-sn6y8m">Криптовалюты</a></nav> <ul class="svelte-15n3bs8"><li><a href="https://t.me/spblpr" target="_blank" aria-label="Telegram ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#1d98dc" d="M0 0h42v42H0z"/><path fill="#d8e4ee" d="M18.236 26.982c-.494 0-.41-.187-.581-.658L16.2 21.535l11.2-6.644"/><path fill="#c1d7e5" d="M18.236 27.057c.382 0 .55-.174.764-.382l2.036-1.98-2.54-1.531"/><path fill="#fff" d="m18.506 23.193 6.155 4.547c.703.388 1.21.187 1.384-.652l2.506-11.806c.256-1.028-.392-1.495-1.064-1.19l-14.712 5.673c-1.004.403-.998.963-.183 1.212l3.776 1.179 8.74-5.514c.413-.25.791-.116.48.16"/></g></svg><!-- HTML_TAG_END --></a></li> <li><a href="https://twitter.com/spblpr" target="_blank" aria-label="Twitter ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#69ace0" d="M0 0h42v42H0z"/><path fill="#fff" d="M27.667 16.333 29.333 16s-1.4 1.567-1.666 1.667c-.034.766 0 1 0 1-3.2 13.733-15 7.666-15 7.666 4.3.1 4.666-1.666 4.666-1.666-2.5-.367-3-2-3-2 .867.4 1.334-.334 1.334-.334-2.7-.7-2.334-3.333-2.334-3.333.467.4 1.2.567 1.634.633-.3-.366-2.834-3.4-1.3-4.966 0 0 1.866 3.333 6.766 3.633l.334-.067C20.7 18 20.7 17.767 20.7 17.5a3.5 3.5 0 0 1 3.5-3.5c2.333 0 2.833 1.333 2.833 1.333l1.667-1c-.033 0-.2 1.667-1.033 2z"/></g></svg><!-- HTML_TAG_END --></a></li> <li><a href="https://vk.com/spblpr" target="_blank" aria-label="VK ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#507299" d="M0 0h42v42H0z"/><path fill="#fff" d="M22.426 25.471a.646.646 0 0 0 .476-.204.66 3.663 0 0 0 .136-.408s0-1.342.612-1.546c.611-.204 1.427 1.275 2.243 1.818a1.87 1.87 0 0 0 1.156.34h2.244s1.155 0 .611-1.002a8.346 8.346 0 0 0-1.7-1.887c-1.427-1.275-1.223-1.07.477-3.298 1.02-1.342 1.427-2.158 1.36-2.566-.069-.408-.884-.272-.884-.272h-2.499a.918.918 0 0 0-.34 0 .527.527 0 0 0-.204.272c-.262.677-.58 1.33-.952 1.955-1.155 1.886-1.563 1.954-1.7 1.886-.135-.068-.34-1.07-.34-1.7 0-1.818.273-2.566-.543-2.77a3.926 3.926 0 0 0-1.377-.05 5.949 5.949 0 0 0-2.108.203c-.272.136-.544.476-.408.476.285.007.555.13.748.34.185.35.279.742.272 1.139 0 0 .136 2.158-.34 2.43-.476.272-.816-.204-1.835-1.886a10.997 10.997 0 0 1-.884-1.82.527.527 0 0 0-.187-.271.68.68 0 0 0-.408-.136h-2.448a.85.85 0 0 0-.544.136c-.136.136 0 .408 0 .408a27.195 27.195 0 0 0 4.08 6.544 5.864 5.864 0 0 0 4.215 1.886l1.07-.017z"/></g></svg><!-- HTML_TAG_END --></a></li>  <li><a href="https://youtube.com/spblpr" target="_blank" aria-label="YouTube ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#f33" d="M0 0h42v42H0z"/><path fill="#fff" d="m17 27.489 10.645-6.148L17 15.194z"/></g></svg><!-- HTML_TAG_END --></a></li> </ul></div> </div> 
 			
 			<script>
 				{
-					__sveltekit_etdpss = {
-						env: {},
+					__sveltekit_chccnr = {
 						assets: "/spblpr",
 						base: new URL("..", location).pathname.slice(0, -1),
-						element: document.currentScript.parentElement
+						env: {}
 					};
+
+					const element = document.currentScript.parentElement;
 
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.8aa09840.js"),
-						import("../_app/immutable/entry/app.b3deb2ea.js")
+						import("../_app/immutable/entry/start.2073de0a.js"),
+						import("../_app/immutable/entry/app.183f82cf.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_etdpss.element, {
+						kit.start(app, element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
