deploy: df2e5a65a01f70028e5c86b96d2fe620814f10df

--- a/donate/usdc.html
+++ b/donate/usdc.html
@@ -7,19 +7,19 @@
 		
 		<link href="../_app/immutable/assets/0.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/5.a9981ce8.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.2073de0a.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.1e64768e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.feaddeb4.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.80f6d9f8.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.7135cd3e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.f5b05b5f.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.183f82cf.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.2e21bf5c.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.320256d5.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.c732cb4c.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.095562e6.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.56460d9b.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.6ec77645.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.335d251b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.9cd54588.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/2.11b77075.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/meta.eff12250.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/2.8e690c97.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/meta.2436c4f1.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/5.6fceeea7.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/usdc"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/usdc"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
 	</head>
 	<body>
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_chccnr = {
+					__sveltekit_15ngs2 = {
 						assets: "/spblpr",
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
@@ -42,8 +42,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.2073de0a.js"),
-						import("../_app/immutable/entry/app.183f82cf.js")
+						import("../_app/immutable/entry/start.1e64768e.js"),
+						import("../_app/immutable/entry/app.2e21bf5c.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2, 5],
