--- a/donate/ltc.html
+++ b/donate/ltc.html
@@ -7,20 +7,32 @@
 		
 		<link href="../_app/immutable/assets/0.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/5.a9981ce8.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.1e64768e.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.44ee41e3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.feaddeb4.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.7135cd3e.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.360ab1f8.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.f5b05b5f.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.2e21bf5c.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.8f13f84a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.320256d5.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.095562e6.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.dd86f2e6.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.56460d9b.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.335d251b.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.42f14bf7.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.9cd54588.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/2.8e690c97.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/meta.2436c4f1.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/2.84145ff4.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/meta.66dc364d.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/5.6fceeea7.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/ltc"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/ltc"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
+
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z3GJ7K0BVN"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-Z3GJ7K0BVN');
+		</script>
 	</head>
 	<body>
 		<div>  <div class="grid-container svelte-80q6by"><div class="main-content svelte-80q6by"> <h1>Litecoin</h1> <p class="svelte-bzs1vh"><span class="svelte-bzs1vh">t1P1K26BaEnDMX5RbrPURE4Ek4hyaPgRe35</span> <button aria-label="Скопировать" class="svelte-kzqxxw"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" aria-hidden="true" class="bx--snippet__icon" viewBox="0 0 32 32"><path d="M28 10v18H10V10h18m0-2H10a2 2 0 0 0-2 2v18a2 2 0 0 0 2 2h18a2 2 0 0 0 2-2V10a2 2 0 0 0-2-2Z"/><path d="M4 18H2V4a2 2 0 0 1 2-2h14v2H4Z"/></svg><!-- HTML_TAG_END -->  </button></p> <div class="svelte-bzs1vh"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 37 37" shape-rendering="crispEdges"><path fill="#ffffff" d="M0 0h37v37H0z"/><path stroke="#000000" d="M4 4.5h7m2 0h1m1 0h1m2 0h1m4 0h2m1 0h7M4 5.5h1m5 0h1m1 0h3m1 0h2m3 0h4m1 0h1m5 0h1M4 6.5h1m1 0h3m1 0h1m5 0h1m2 0h1m2 0h1m3 0h1m1 0h3m1 0h1M4 7.5h1m1 0h3m1 0h1m2 0h3m1 0h1m3 0h3m2 0h1m1 0h3m1 0h1M4 8.5h1m1 0h3m1 0h1m1 0h1m3 0h2m2 0h1m1 0h1m3 0h1m1 0h3m1 0h1M4 9.5h1m5 0h1m3 0h1m3 0h6m2 0h1m5 0h1M4 10.5h7m1 0h1m1 0h1m1 0h1m1 0h1m1 0h1m1 0h1m1 0h1m1 0h7M14 11.5h1m4 0h4M4 12.5h1m1 0h1m1 0h1m1 0h1m4 0h1m5 0h1m6 0h1m2 0h1M4 13.5h1m1 0h4m1 0h1m2 0h1m1 0h2m5 0h3m3 0h1m2 0h1M5 14.5h1m1 0h1m2 0h2m2 0h1m3 0h1m2 0h2m2 0h1m2 0h3m1 0h1M4 15.5h1m1 0h1m1 0h2m2 0h3m2 0h2m2 0h4m6 0h1M5 16.5h2m3 0h2m2 0h3m1 0h1m2 0h2m2 0h2m1 0h1m1 0h1m1 0h1M4 17.5h2m1 0h1m1 0h1m1 0h2m1 0h1m3 0h1m2 0h4m4 0h2M4 18.5h1m3 0h10m6 0h1m4 0h1m1 0h2M4 19.5h1m1 0h2m1 0h1m1 0h1m2 0h2m3 0h3m1 0h1m1 0h1m2 0h2M6 20.5h1m3 0h1m2 0h1m1 0h2m3 0h2m4 0h1m2 0h1m2 0h1M5 21.5h2m1 0h1m2 0h5m1 0h1m2 0h1m2 0h2m1 0h1m2 0h1m2 0h1M4 22.5h1m3 0h4m4 0h1m1 0h1m1 0h1m1 0h1m1 0h5m3 0h1M5 23.5h1m3 0h1m2 0h1m2 0h4m2 0h1m7 0h1m1 0h1M4 24.5h1m1 0h1m1 0h5m3 0h1m1 0h1m2 0h1m2 0h6m1 0h2M12 25.5h1m1 0h1m1 0h1m1 0h3m1 0h1m1 0h1m3 0h1m3 0h1M4 26.5h7m4 0h1m1 0h1m4 0h3m1 0h1m1 0h1m2 0h2M4 27.5h1m5 0h1m2 0h1m2 0h1m3 0h3m1 0h1m3 0h1m3 0h1M4 28.5h1m1 0h3m1 0h1m1 0h3m5 0h2m2 0h5m1 0h1m1 0h1M4 29.5h1m1 0h3m1 0h1m2 0h1m2 0h2m2 0h2m1 0h2m2 0h1m1 0h1m1 0h2M4 30.5h1m1 0h3m1 0h1m1 0h1m2 0h1m2 0h1m1 0h1m1 0h1m1 0h5m3 0h1M4 31.5h1m5 0h1m6 0h1m1 0h1m1 0h5m5 0h1M4 32.5h7m1 0h3m2 0h1m5 0h2m3 0h1m2 0h2"/></svg>
@@ -31,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_15ngs2 = {
+					__sveltekit_bhoj9v = {
 						assets: "/spblpr",
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
@@ -42,8 +54,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.1e64768e.js"),
-						import("../_app/immutable/entry/app.2e21bf5c.js")
+						import("../_app/immutable/entry/start.44ee41e3.js"),
+						import("../_app/immutable/entry/app.8f13f84a.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2, 5],
