--- a/donate/once.html
+++ b/donate/once.html
@@ -8,22 +8,34 @@
 		<link href="../_app/immutable/assets/0.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/7.11eea95a.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/link.3c7701a9.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.1e64768e.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.44ee41e3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.feaddeb4.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.7135cd3e.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.360ab1f8.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.f5b05b5f.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.2e21bf5c.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.8f13f84a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.320256d5.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.095562e6.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.dd86f2e6.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.56460d9b.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.335d251b.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.42f14bf7.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.9cd54588.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/2.8e690c97.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/meta.2436c4f1.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/2.84145ff4.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/meta.66dc364d.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/8.e7523f93.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/each.e59479a4.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/link.6f0786c4.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/once"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/once"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
+
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z3GJ7K0BVN"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-Z3GJ7K0BVN');
+		</script>
 	</head>
 	<body>
 		<div>  <div class="grid-container svelte-80q6by"><div class="main-content svelte-80q6by"> <h1 class="svelte-bffvwb">Разовое пожертвование</h1> <ul class="svelte-bffvwb"><li><a href="./sber" class=" svelte-1ya45z4" target="_self" rel="">Сбербанк </a> </li><li><a href="./tinkoff" class=" svelte-1ya45z4" target="_self" rel="">Тинькофф </a> </li><li><a href="./alfabank" class=" svelte-1ya45z4" target="_self" rel="">Альфа-Банк </a> </li> <li><a href="./crypto" class=" svelte-1ya45z4" target="_self" rel="">Криптовалюты </a></li> </ul></div> <div class="footer svelte-80q6by"><nav class="svelte-sn6y8m"><a href="https://yslpn.github.io/spblpr/" class="svelte-sn6y8m">Главная</a> /
@@ -31,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_15ngs2 = {
+					__sveltekit_bhoj9v = {
 						assets: "/spblpr",
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
@@ -42,8 +54,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.1e64768e.js"),
-						import("../_app/immutable/entry/app.2e21bf5c.js")
+						import("../_app/immutable/entry/start.44ee41e3.js"),
+						import("../_app/immutable/entry/app.8f13f84a.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2, 8],
