--- a/donate/crypto.html
+++ b/donate/crypto.html
@@ -8,22 +8,22 @@
 		<link href="../_app/immutable/assets/0.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/6.0907fae7.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/link.3c7701a9.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.44ee41e3.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.889484c5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.feaddeb4.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.360ab1f8.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.f5ef0779.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.f5b05b5f.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.8f13f84a.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index.320256d5.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.dd86f2e6.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.7a67add7.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index.45abd7f3.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.450eedd4.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.56460d9b.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.42f14bf7.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.f83ce0a7.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.9cd54588.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/2.84145ff4.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/meta.66dc364d.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/6.237c2905.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/2.9a173c39.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/meta.5aa4cb82.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/6.8ee73be0.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/each.e59479a4.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/link.6f0786c4.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/crypto"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/crypto"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/link.7eec1c9b.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/crypto"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/crypto"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
 
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z3GJ7K0BVN"></script>
@@ -44,7 +44,7 @@
 			
 			<script>
 				{
-					__sveltekit_bhoj9v = {
+					__sveltekit_7nkdox = {
 						assets: "/spblpr",
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
@@ -55,8 +55,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.44ee41e3.js"),
-						import("../_app/immutable/entry/app.8f13f84a.js")
+						import("../_app/immutable/entry/start.889484c5.js"),
+						import("../_app/immutable/entry/app.7a67add7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2, 6],
