--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 		<link href="./_app/immutable/assets/0.B-jQS5f4.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.CnEBxXad.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.BfEjzs-W.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.oDpETOFm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BmaM9qDZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Dsutg_W8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DOxf2DCI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DJEsDRqV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.CYgJF_JY.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.hPhjqSdV.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.ZFuScMEQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.UDOAXvno.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DTcnE62O.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BQeiFa8M.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/textData.Bx_FZ2i2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CpXCD_RS.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.De9Nf3nF.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/paymentData.DKj0TrwF.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/main.BLoaUCUo.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.CkOLZzE1.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.BmL31arB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/link.B9nYuwjB.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/meta.B8yEv3BU.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:url" content="https://yslpn.github.io/spblpr/"><meta property="og:type" content="website"><meta property="og:title" content="ЛПР Петербург"><meta property="og:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:image" content="https://yslpn.github.io./og-main.png"><meta property="og:image:secure_url" content="https://yslpn.github.io./og-main.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/"><meta name="twitter:title" content="ЛПР Петербург"><meta name="twitter:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta name="twitter:image" content="https://yslpn.github.io./og-main.png"><link rel="preconnect" href="https://lp-russia.org"><!-- HEAD_svelte-1t4jq75_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/meta.BomnktiH.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:url" content="https://yslpn.github.io/spblpr/"><meta property="og:type" content="website"><meta property="og:title" content="ЛПР Петербург"><meta property="og:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:image" content="https://yslpn.github.io./og-main.png"><meta property="og:image:secure_url" content="https://yslpn.github.io./og-main.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/"><meta name="twitter:title" content="ЛПР Петербург"><meta name="twitter:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta name="twitter:image" content="https://yslpn.github.io./og-main.png"><link rel="preconnect" href="https://lp-russia.org"><!-- HEAD_svelte-1t4jq75_END -->
 
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z3GJ7K0BVN"></script>
@@ -40,7 +40,7 @@
 			
 			<script>
 				{
-					__sveltekit_uogrua = {
+					__sveltekit_1glaicf = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/spblpr"
 					};
@@ -50,8 +50,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.oDpETOFm.js"),
-						import("./_app/immutable/entry/app.hPhjqSdV.js")
+						import("./_app/immutable/entry/start.Dsutg_W8.js"),
+						import("./_app/immutable/entry/app.ZFuScMEQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
