--- a/donate/btc.html
+++ b/donate/btc.html
@@ -7,19 +7,19 @@
 		
 		<link href="../_app/immutable/assets/0.B-jQS5f4.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/5.DlVjN7Gu.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.Dsutg_W8.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.DOxf2DCI.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.wBGklALJ.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.ClFN8Lok.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.DJEsDRqV.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.CYgJF_JY.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.ZFuScMEQ.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.DVcjlRC3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.UDOAXvno.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.BQeiFa8M.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.Cccvh6A_.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/textData.Bx_FZ2i2.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.De9Nf3nF.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.CR_Bp7UN.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/paymentData.DKj0TrwF.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.BLoaUCUo.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/2.CK7v7Qp8.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/meta.BomnktiH.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/2.Dx22fZiK.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/meta.DDIgDSci.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/5.DM5nG1eA.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/btc"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io../og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io../og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/btc"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io../og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
 
 		<!-- Google tag (gtag.js) -->
@@ -43,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_1glaicf = {
+					__sveltekit_110lsdt = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						assets: "/spblpr"
 					};
@@ -53,8 +53,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.Dsutg_W8.js"),
-						import("../_app/immutable/entry/app.ZFuScMEQ.js")
+						import("../_app/immutable/entry/start.wBGklALJ.js"),
+						import("../_app/immutable/entry/app.DVcjlRC3.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2, 5],
