deploy: 61a90b1db16c0cd9faee54889bb13185684db20d

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 		<link href="/spblpr/_app/immutable/assets/0.B-jQS5f4.css" rel="stylesheet">
 		<link href="/spblpr/_app/immutable/assets/3.CnEBxXad.css" rel="stylesheet">
 		<link href="/spblpr/_app/immutable/assets/link.BfEjzs-W.css" rel="stylesheet">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/entry/start.LNvjuk6-.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/entry.CbJ-0dzX.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/entry/start.Cn6kw87t.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/entry.BJVlzpnt.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/scheduler.DJEsDRqV.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/control.CYgJF_JY.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/entry/app.CBPhEdmw.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/entry/app.kLa07ZVd.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/index.UDOAXvno.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/nodes/0.BisZWphZ.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/nodes/0.D-Vqb_73.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/textData.Bx_FZ2i2.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/stores.Cr6nqXeF.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/stores.BRk7cYf6.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/paymentData.DKj0TrwF.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/main.BLoaUCUo.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/nodes/3.CdzlxnPJ.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/nodes/3.XGk8ASc9.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/link.B9nYuwjB.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/meta.CH_-V82C.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:url" content="https://yslpn.github.io/spblpr/"><meta property="og:type" content="website"><meta property="og:title" content="ЛПР Петербург"><meta property="og:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:image" content="https://yslpn.github.io/spblpr/og-main.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-main.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/"><meta name="twitter:title" content="ЛПР Петербург"><meta name="twitter:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-main.png"><link rel="preconnect" href="https://lp-russia.org"><!-- HEAD_svelte-1t4jq75_END -->
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/meta.BXshBNH8.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:url" content="https://yslpn.github.io/spblpr/"><meta property="og:type" content="website"><meta property="og:title" content="ЛПР Петербург"><meta property="og:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:image" content="https://yslpn.github.io/spblpr/og-main.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-main.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/"><meta name="twitter:title" content="ЛПР Петербург"><meta name="twitter:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-main.png"><link rel="preconnect" href="https://lp-russia.org"><!-- HEAD_svelte-1t4jq75_END -->
 
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z3GJ7K0BVN"></script>
@@ -40,7 +40,7 @@
 			
 			<script>
 				{
-					__sveltekit_vovpjv = {
+					__sveltekit_1pl3f0y = {
 						base: "/spblpr",
 						assets: "/spblpr"
 					};
@@ -50,8 +50,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null];
 
 					Promise.all([
-						import("/spblpr/_app/immutable/entry/start.LNvjuk6-.js"),
-						import("/spblpr/_app/immutable/entry/app.CBPhEdmw.js")
+						import("/spblpr/_app/immutable/entry/start.Cn6kw87t.js"),
+						import("/spblpr/_app/immutable/entry/app.kLa07ZVd.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
