deploy: 6bbd4084e954b4aec634921e27f4cd86301f14dc

--- a/donate/crypto.html
+++ b/donate/crypto.html
@@ -8,19 +8,19 @@
 		<link href="/spblpr/_app/immutable/assets/0.B-jQS5f4.css" rel="stylesheet">
 		<link href="/spblpr/_app/immutable/assets/6.DtMNWBG_.css" rel="stylesheet">
 		<link href="/spblpr/_app/immutable/assets/link.BfEjzs-W.css" rel="stylesheet">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/entry/start.Cn6kw87t.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/entry.BJVlzpnt.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/entry/start.B6rC3UZb.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/entry.DA6i9KXm.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/scheduler.DJEsDRqV.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/control.CYgJF_JY.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/entry/app.kLa07ZVd.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/entry/app.BMG0jM-X.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/index.UDOAXvno.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/nodes/0.D-Vqb_73.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/nodes/0.C2WSDzAK.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/textData.Bx_FZ2i2.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/stores.BRk7cYf6.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/stores.Sr9ETnG4.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/paymentData.DKj0TrwF.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/main.BLoaUCUo.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/nodes/2.DC9_90Y5.js">
-		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/meta.BXshBNH8.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/nodes/2.CJdeW04n.js">
+		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/meta.BpwRQlkc.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/nodes/6.BRvzfY8_.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/each.D6YF6ztN.js">
 		<link rel="modulepreload" href="/spblpr/_app/immutable/chunks/link.B9nYuwjB.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/crypto"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/crypto"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
@@ -44,7 +44,7 @@
 			
 			<script>
 				{
-					__sveltekit_1pl3f0y = {
+					__sveltekit_1u4uy7z = {
 						base: "/spblpr",
 						assets: "/spblpr"
 					};
@@ -54,8 +54,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("/spblpr/_app/immutable/entry/start.Cn6kw87t.js"),
-						import("/spblpr/_app/immutable/entry/app.kLa07ZVd.js")
+						import("/spblpr/_app/immutable/entry/start.B6rC3UZb.js"),
+						import("/spblpr/_app/immutable/entry/app.BMG0jM-X.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2, 6],
